--- a/src/App.css
+++ b/src/App.css
@@ -3,9 +3,16 @@
   background-color: #282c34;
   min-height: 100vh;
   display: flex;
-  flex-direction: column;
+  flex-direction: row;
   align-items: center;
   justify-content: center;
   font-size: calc(10px + 2vmin);
   color: #61dafb;
+}
+
+.Figure {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
 }
