Update css for image

--- a/src/App.css
+++ b/src/App.css
@@ -17,6 +17,8 @@
   justify-content: center;
   min-width: 500px;
   max-width: 500px;
+  min-height: 500px;
+  max-height: 500px;
 }
 
 .buttons {
@@ -26,9 +28,4 @@
   border-radius: 5px;
   border-width: medium;
   border-color: #61dafb;
-}
-
-img {
-  max-width: 100%;
-  height: auto;
 }
